Include spaces and fix spacing on list items

--- a/aesthetic.css
+++ b/aesthetic.css
@@ -37,7 +37,7 @@ a:focus {
 }
 
 strong {
-  margin-right: 0.3rem;
+  margin-right: 0.1rem;
 }
 
 h1,
